# metatrace

./: .bumpversion.cfg  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: tests.yml
metatrace/: clickhouse.py
metatrace/api/: __init__.py
metatrace/cli/: __init__.py  __main__.py  credentials.py
metatrace/cli/data/: __init__.py
metatrace/cli/metadata/: __init__.py  asn.py  base.py  geo.py  ixp.py
metatrace/lib/: clickhouse.py  credentials.py  logger.py  naming.py  utilities.py
metatrace/lib/data/: __init__.py
metatrace/lib/metadata/: __init__.py  asn.py  base.py  geo.py  ixp.py  utils.py
metatrace/lib/sources/: __init__.py  ark.py  collectors.py  peeringdb.py
metatrace/static/fonts/bootstrap-icons-1.8.3/: bootstrap-icons.css  bootstrap-icons.scss
metatrace/templates/: base.html  wait.html
metatrace/templates/errors/: query.html  request.html
metatrace/web/: __init__.py
templates/: base.html  index.html  metadata.html
templates/errors/: database.html
tests/: test_metatrace.py
