[tool.poetry]
name = "metatrace"
version = "0.1.0"
description = ""
authors = [
    "Maxime Mouchet <maxime.mouchet@lip6.fr>",
    "Matthieu Gouel <matthieu.gouel@lip6.fr>",
    "Kevin Vermeulen <kevin.vermeulen@cnrs.fr>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Babel = "^2.10.1"
fetchmesh = "^0.3.3"
pandas = "^1.4.2"
Pint = "^0.19.2"
pyasn = "^1.6.1"
pych-client = "^0.2.10"
rich = "^12.4.4"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]
mypy = "^0.960"
pre-commit = "^2.19.0"
pytest = "^7.1.2"

[tool.poetry.scripts]
metatrace = 'metatrace.cli:app'

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
