[tool.poetry]
name = "metatrace"
version = "0.1.0"
description = ""
authors = [
    "Maxime Mouchet <maxime.mouchet@lip6.fr>",
    "Matthieu Gouel <matthieu.gouel@lip6.fr>",
    "Kevin Vermeulen <kevin.vermeulen@cnrs.fr>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dioptra-io/metatrace"

[tool.poetry.dependencies]
python = "^3.10"
Babel = "^2.10.1"
beautifulsoup4 = "^4.11.1"
fastapi = "^0.78.0"
pandas = "^1.4.2"
Pint = "^0.19.2"
pyasn = "^1.6.1"
pych-client = "^0.2.10"
rich = "^12.4.4"
typer = "^0.4.1"
uvicorn = "^0.17.6"
more-itertools = "^8.13.0"
DateTimeRange = "^1.2.0"

[tool.poetry.dev-dependencies]
mypy = "^0.960"
black = "^22.3.0"
flake8 = "^4.0.1"
pre-commit = "^2.19.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
metatrace = 'metatrace.cli:app'

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:$",
    "if __name__ == \"__main__\":$",
    "pass$",
    "\\s\\.\\.\\.$",
    "raise NotImplementedError$"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
